--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ meta_description: "Coding Favorites"
 
 aboutPage: true
 
-markdown: redcarpet
+kramdown: redcarpet
 highlighter: pygments
 
 paginate: 20
