--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ meta_description: "Coding Favorites"
 aboutPage: true
 
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 
 paginate: 20
 baseurl: /
