--- a/_config.yml
+++ b/_config.yml
@@ -1,44 +1,19 @@
-name: Coding Favorites
-description: A Coding Favorites Man
-meta_description: "Coding Favorites"
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-aboutPage: true
+# Site settings
+title: yuanyuan
+email: yukeyong87@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Coding coding coding it.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://yukeyong.com" # the base hostname & protocol for your site
+twitter_username: 
+github_username:  shukean
 
+# Build settings
 markdown: kramdown
-highlighter: rouge
-
-paginate: 20
-baseurl: /
-domain_name: 'http://yukeyong.com'
-disqus: false
-disqus_shortname: ''
-
-# Details for the RSS feed generator
-url:            'http://yukeyong.com'
-author:         'Keyong Yu'
-authorGithub:   'shukean'
-authorAvator:   'https://avatars3.githubusercontent.com/u/4089620?v=3&s=460'
-
-permalink:       /:year/:title/
-
-defaults:
-    -
-        scope:
-            path: "" # empty string for all files
-            type: pages
-        values:
-            layout: default
-    -
-        scope:
-            path: "" # empty string for all files
-            type: posts
-        values:
-            layout: post
-    -
-        scope:
-            path: ""
-            type: drafts
-        values:
-            layout: post
-
-gems: [jekyll-paginate]
