--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: yuanyuan
+title: Red hair
 email: yukeyong87@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Coding coding coding it.
+  A note.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yukeyong.com" # the base hostname & protocol for your site
 twitter_username: 
