--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,13 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# Setup
+name: "Coding ... yky"
+desc: "Coding Peasant"
+github: "shukean"
+tagline: ""
+baseurl:      ""
 
-# Site settings
-title: Red hair
-email: yukeyong87@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  A note.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yukeyong.com" # the base hostname & protocol for your site
-twitter_username: 
-github_username:  shukean
+# Gems
+gems:
+  - jekyll-paginate
 
-# Build settings
+#Others
 markdown: kramdown
